feat(settings): add light theme to page

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -5,6 +5,7 @@
     <meta charset='UTF-8'>
     <title data-page='settings'>&nbsp;</title>
     <link rel='icon' type='image/png' href='icon16.png' />
+    <link rel='stylesheet' type='text/css' href='light_theme.css' />
 </head>
 
 <body class='using_mouse'>
